login(beta) y js

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="main-footer text-center">
     <div class="footer-content">
       <strong>Copyright &copy; 2023
-        <a class="text-danger"<p>Gestor de Tareas</p></a>
+        <a class="text-danger" href="https://www.emcali.com.co/">EMCALI E.I.C.E. E.S.P. </a>
       </strong><br>
       Todos los derechos reservados.
     </div>
