--- a/templates/list.html
+++ b/templates/list.html
@@ -1,62 +1,46 @@
 {% extends 'layout.html' %}
-{% load widget_tweaks %}
-{% block content %}
-    <form method="post" action=".">
-        <div class="card card-dark">
-            <div class="card-header">
-                <h3 class="card-title">
-                    <i class="fas fa-trash"></i>
-                    {{ title }}
-                </h3>
-            </div>
-            <div class="card-body">
-                {% csrf_token %}
-                <input type="hidden" name="action" value="{{ action }}">
-                {% if form.errors %}
-                    <div class="alert alert-danger alert-dismissible">
-                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                        <h5><i class="icon fas fa-ban"></i> Ha ocurrido un error al querer guardar el registro</h5>
-                        <ul>
-                            {% for field in form %}
-                                {% for error in field.errors %}
-                                    <li>{{ error }}</li>
-                                {% endfor %}
-                            {% endfor %}
-                        </ul>
-                    </div>
-                {% endif %}
-                <div class="alert alert-danger alert-dismissible">
-                    <h5><i class="icon fas fa-ban"></i> Notificación!</h5>
-                    ¿Estas seguro de eliminar el registro?
-                </div>
-            </div>
-            <div class="card-footer">
-                <button type="submit" class="btn btn-primary">
-                    <i class="fas fa-save"></i> Si, aceptar
-                </button>
-                <a href="{{ list_url }}" class="btn btn-danger">
-                    <i class="fas fa-times"></i> Cancelar
-                </a>
-            </div>
-        </div>
-    </form>
-    <script>
-       $('form').on('submit', function (e) {
-            e.preventDefault();
-            var parameters = new FormData(this);
-            submit_with_ajax(window.location.pathname, 'Notificación', '¿Estas seguro de eliminar el siguiente registro?', parameters, function () {
-                Swal.fire({
-                    title: 'Alerta',
-                    text: 'Registro eliminado correctamente',
-                    icon: 'success',
-                    timer: 1000,
-                    onClose: () => {
-                        location.href = '{{ list_url }}';
-                    }
-                }).then((result) => {
+{% load static %}
+{% block head %}
+<link rel="stylesheet" href="{% static 'lib/datatables-1.10.20/css/dataTables.bootstrap4.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'lib/datatables-1.10.20/plugins/responsive-2.2.3/css/responsive.bootstrap4.min.css' %}" />
+  <script src="{% static 'lib/datatables-1.10.20/js/jquery.dataTables.js' %}"></script>
+  <script src="{% static 'lib/datatables-1.10.20/js/dataTables.bootstrap4.min.js' %}"></script>
+  <script src="{% static 'lib/datatables-1.10.20/plugins/responsive-2.2.3/js/dataTables.responsive.min.js' %}"></script>
+  <script src="{% static 'lib/datatables-1.10.20/plugins/responsive-2.2.3/js/responsive.bootstrap4.min.js' %}"></script>
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/signature_pad/1.3.4/signature_pad.min.js"></script>
+{% endblock %}
 
-                });
-            });
-        });
-    </script>
+{% block content %}
+  <div class="loader" id="loadScreen"></div>
+  <div class="card card-default">
+    <div class="card-header">
+      <h3 class="card-title">
+        <i class="fas fa-list"></i>
+        {{ title }}
+      </h3>
+    </div>
+    <div class="card-body">
+      <table class="table table-hover table-striped" id="data" style="width:100%">
+        <thead class="thead-secondary">
+          {% block columns %}
+          {% endblock %}
+        </thead>
+        <tbody>
+          {% block rows %}
+          {% endblock %}
+        </tbody>
+      </table>
+    </div>
+    {% block buttons_list %}
+    {% endblock %}
+  </div>
+  {% block modal %}
+  {% endblock %}
+
+{% endblock %}
+
+{% block javascript %}
 {% endblock %}
